Finished V3opt1 analysis. Added five filters from Cardiff measurement.

--- a/code/config/v3opt1.cfg
+++ b/code/config/v3opt1.cfg
@@ -2,7 +2,7 @@
 
 [Model]
 
-Identifier:      v3opt1_75T              #
+Identifier:      v3opt1-75T              #
 TubeQuantity:    13                      #
 TubeDiameter:    37.0                    # cm
 TubeWafers:      3                       #
