--- a/stacks/v3opt1-75t/v3opt1_filters.cfg
+++ b/stacks/v3opt1-75t/v3opt1_filters.cfg
@@ -278,7 +278,7 @@ Thickness:       0.000                          # mm
 
 [Filter XXIII]
 
-Name:            4K Low Pass Filter 1           #
+Name:            4K Thick IR Filter 1           #
 Stage:           3                              #
 Index:           37                             #
 
